# istio_gateway_pkce_plugin

./: .dockerignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md
.github/workflows/: build-push.yaml
docs/: deploy.md
helm/keycloak-wasm-auth/: Chart.yaml  values.yaml
helm/keycloak-wasm-auth/templates/: _helpers.tpl  secret.yaml  serviceentry.yaml  wasmplugin.yaml
k8s/: gateway-routing-note.txt  serviceentry-keycloak.yaml  wasmplugin.yaml
src/: lib.rs
