[package]
name = "istio-keycloak-wasm-plugin"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
proxy-wasm = "0.2.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
sha2 = "0.10"
hmac = "0.12"
hkdf = "0.12"
aes-gcm-siv = "0.11"
url = "2.5"
urlencoding = "2.1"
hex = "0.4"
num-bigint = { version = "0.4", default-features = false }
